WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
284053
[WebGPU] onSubmittedWorkDone hangs when the device is destroyed
https://bugs.webkit.org/show_bug.cgi?id=284053
Summary
[WebGPU] onSubmittedWorkDone hangs when the device is destroyed
Mike Wyrzykowski
Reported
2024-12-04 10:37:51 PST
[WebGPU] onSubmittedWorkDone hangs when no work was submitted
Attachments
Add attachment
proposed patch, testcase, etc.
Mike Wyrzykowski
Comment 1
2024-12-04 10:38:01 PST
rdar://140888787
Mike Wyrzykowski
Comment 2
2024-12-04 10:47:24 PST
Pull request:
https://github.com/WebKit/WebKit/pull/37446
Mike Wyrzykowski
Comment 3
2024-12-04 11:26:36 PST
Invalid test case, this works as expected
EWS
Comment 4
2024-12-05 09:02:45 PST
Committed
287402@main
(9977d02fa8cf): <
https://commits.webkit.org/287402@main
> Reviewed commits have been landed. Closing PR #37450 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug