[WebGPU] onSubmittedWorkDone hangs when no work was submitted https://bugs.webkit.org/show_bug.cgi?id=284053 rdar://140888787

Reviewed by NOBODY (OOPS!).

If the completedCommandBuffer count was equal to the count of command buffers
submitted, i.e., no additional GPUCommandBuffers were submitted to GPUQueue.submit(),
GPUQueue.onSubmittedWorkDone() would appear to hang as its promise was never resolved.

* LayoutTests/ifast/webgpu/regression/repro_284053-expected.txt: Added.
* LayoutTests/fast/webgpu/regression/repro_284053.html: Added.
Add regression test.

* Source/WebGPU/WebGPU/Queue.mm:
(WebGPU::Queue::onSubmittedWorkDone):
Immedietly resolve when no work is pending.